Shang New Live/src/objects/Deposit_Refund__c.object
<CustomObject>
    <fields>
        <fullName>Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deposit</label>
        <referenceTo>Deposit__c</referenceTo>
        <relationshipLabel>Deposit Refund</relationshipLabel>
        <relationshipName>Deposit_Refund</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Name_Text__c</fullName>
        <description>This field is populated by W/F rule</description>
        <inlineHelpText>This field is populated by W/F rule</inlineHelpText>
        <label>Property Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Mode__c</fullName>
        <label>Refund Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
                <value>
                    <fullName>Cash/Cheque</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refunded_Amount__c</fullName>
        <label>Refunded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <label>Deposit Refund</label>
    <nameField>
        <label>Deposit Refund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deposit Refund</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>